k8_manifests/rollingUpdate/ingress/backend-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: "app-ingress-backend"
  namespace: "dev-rolling-update"
  # take second captured group and forward request to that path where /$2 is /contact defined in the backend code as /api/contact. /$2 means everything after /api which is /contact so re-write the request to /contact in the backend.
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:

  ingressClassName: nginx

  rules: 
# - host: host-based routing can be used like localhost for local environment or as per the requirement.
  
  - host: dev-rolling-update.internal

# below is path based routing:
    http:
      paths:

# /api path routes to backend meaning everything starting with /api but will include everything after /api/ and currently we have /api/contact in the backend.
       - path: /api(/|$)(.*) 

# pathType: Prefix: Strictly matches path elements (e.g., /api matches /api/v1). It treats special characters like ( and $ as literal text, not regex. ImplementationSpecific: Tells Kubernetes to let the specific controller (NGINX) handle the string using its own rules, which includes regex support.       
         pathType: ImplementationSpecific  
         backend: 
           service:
            name: "backend-service"
            port: 
             number: 80       

# / path routes to frontend     
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#            name: "frontend-service"
#            port: 
#              number: 80
