k8_manifests/rollingUpdate/ingress/frontend-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: "app-ingress-frontend"
  namespace: "dev-rolling-update"

spec:

  ingressClassName: nginx

  rules: 
# - host: host-based routing can be used like localhost for local environment or as per the requirement.

  - host: dev-rolling-update.internal

# below is path based routing:
    http:
      paths:
# / path routes to frontend     
       - path: /
         pathType: Prefix
         backend:
           service:
            name: "frontend-service"
            port: 
              number: 80
